--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vercel": "^5.0.1",
     "astro": "^3.1.2",
+    "fuse.js": "^6.6.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3"
   },
