--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "prettier": "^3.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.3"
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0",
+    "prettier-plugin-tailwindcss": "^0.5.6"
   }
 }
