--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "rewrites": [
     {
-      "source": "/js/script.js",
+      "source": "/stats/js/script.js",
       "destination": "https://plausible.io/js/script.js"
     },
     {
-      "source": "/api/event",
+      "source": "/stats/api/event",
       "destination": "https://plausible.io/api/event"
     }
   ]
