--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@astrojs/sitemap": "^3.0.2",
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vercel": "^5.0.1",
+    "@resvg/resvg-js": "^2.6.0",
     "astro": "^3.3.0",
     "fuse.js": "^6.6.2",
+    "satori": "^0.10.9",
+    "satori-html": "^0.3.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3"
   },
