--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vercel": "^5.0.1",
     "@resvg/resvg-js": "^2.6.0",
+    "@vercel/analytics": "^1.1.1",
     "astro": "^3.3.0",
     "fuse.js": "^6.6.2",
     "satori": "^0.10.9",
