--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vercel": "^8.0.1",
-    "@resvg/resvg-js": "^2.6.2",
     "@vercel/analytics": "^1.3.1",
     "astro": "^5.1.2",
+    "astro-og-canvas": "^0.5.5",
     "fuse.js": "^6.6.2",
-    "satori": "^0.10.14",
-    "satori-html": "^0.3.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.13"
   },
