--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@vercel/analytics": "^1.3.1",
     "astro": "^5.1.2",
     "astro-og-canvas": "^0.5.5",
-    "fuse.js": "^6.6.2",
+    "pagefind": "^1.3.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.13"
   },
